# twat-ez

./: .pre-commit-config.yaml  CLEANUP.txt  LOG.md  README.md  REFACTOR_FILELIST.txt  REPO_CONTENT.txt  VERSION.txt  pyproject.toml
.cursor/rules/: filetree.mdc
.github/workflows/: push.yml  release.yml
src/twat_ez/: __init__.py  py_needs.py
tests/: test_package.py  test_twat_ez.py
